[metadata]
name = opni-nats
version = 0.0.0.2
author = Rancher Labs
author_email = sanjay.nadhavajhala@suse.com
description = A NATS helper used by Rancher Opni
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rancher/opni-nats-wrapper
project_urls =
    Bug Tracker = https://github.com/rancher/opni-nats-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    asyncio-nats-client

[options.packages.find]
where = src
